# llm-evaluability-measurement

./: .pre-commit-config.yaml  README.md  model_baseline.ipynb  pyproject.toml
Baseline/: model_baseline.ipynb
Paper/: EXPERIMENT_DESIGN.md  references.bib
