[project]
name = "llm-evaluability-measurement"
version = "0.1.0"
description = "This project investigates whether task decomposition extends the operating range of LLM judges in multilingual, reference-free evaluation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=4.6.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "wandb>=0.28.0",
    "weave>=0.53.0",
]
